<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    >
    
      <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/chhhhh1"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
        android:id="@+id/b41"
        android:textSize="20sp" />
        <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/chhhhh2"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
         android:id="@+id/b42"
        android:textSize="20sp" />
          <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/chhhhh3"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
         android:id="@+id/b43"
        android:textSize="20sp" />
            <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/chhhhh4"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
         android:id="@+id/b44"
        android:textSize="20sp" />
              <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
        android:text="@string/chhhhh5"
         android:id="@+id/b45"
        android:textSize="20sp" />
           
</LinearLayout>