<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    >
    
      <Button
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/chhh1"
        android:id="@+id/b21"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
        android:textSize="20sp" />
        <Button
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/chhh2"
        android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
        android:id="@+id/b22"
        android:textSize="20sp" />
          
 <Button
     android:layout_width="match_parent"
     android:layout_height="68dp"
     android:text="@string/chhh7"
     android:layout_marginTop="5dp"
       
        android:background="#00bfff"
       android:textColor="#ffffff"
        
     android:id="@+id/b23"
     android:textSize="20sp" />

</LinearLayout>